--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,3 +1,7 @@
-style.css
-body {background-color: yellow; }
-h1, p {color: blue;}
+body {
+	background-color: orange;
+}
+
+h1, p {
+	color: blue;
+}
